--- a/content/modules/ROOT/pages/module-01.adoc
+++ b/content/modules/ROOT/pages/module-01.adoc
@@ -14,34 +14,22 @@ Welcome to the Ansible development tools workshop!
 
 image::un-11-2025_at_17.03.29-image.png[Ansible Development Tools, opts="border"]
 
-In this lab, you will learn how to create, test, and deploy an Ansible collection using the `ansible-creator` tool, the Visual Studio Code (VS Code) editor, and the official Ansible extension for VS Code.
+In this lab, you will learn how to create, test, and deploy an Ansible collection using the Ansible development tools, including `ansible-creator`, `ansible-lint`, `ansible-navigator`, `molecule`, the Visual Studio Code (VS Code) editor, and the official Ansible extension for VS Code.
 
 ---
 
 == Lab Tips
 
+
 Before we begin, here are some basic tips to improve your lab experience:
 
-.   The **instructions sidebar** (where you are reading this) can be resized by dragging its border or can be completely collapsed by clicking the arrow at the top of the sidebar. This is useful if you need extra space for the main panel.
+.   The **instructions sidebar** (where you are reading this) can be resized by dragging its border. This is useful if you need extra space for the main panel.
 
-.   The lab consists of several **Challenges** (or *Chapters*). Each challenge contains one or more **Tasks**. The sections can be collapsed and expanded by clicking on them.
-+
-image:/image.png[Collapsing and expanding the instructions sidebar, opts="border"]
-
-.   When we refer to the **VS Code** or **VSCode Editor** tab, we mean the tab at the top of the main lab window, not a separate application.
-
-.   Each **code box** in the instructions has a copy feature. Clicking the **Copy** text at the top right of the box will copy the content to your clipboard, which you can then paste into the VS Code terminal or editor.
-+
-[source,bash]
-----
-$ this is an example code box
-----
+.   The lab consists of several **Chapters** (or sections). Each chapter contains one or more **Tasks**.
 
 .   If you receive any VS Code notification pop-ups, you can safely ignore and dismiss them by clicking `x`, `Dismiss`, or `Ignore`.
 
-.   When you finish a Challenge, you must click the green **Next** or **Check** button at the bottom of the instructions to proceed. The *Check* button will review your work before moving on. Please **click Next now** to continue.
+.   When you finish a Chapter, you must click the **Next** button at the bottom of the instructions sidebar to proceed. 
 
-[IMPORTANT]
-====
-When you finish the lab, you will reach a review screen. Please take a moment to rate the lab and leave your feedback!
-====
+.   You can now click **Next** to continue.
+
