Update lab guide title for ansible-builder

--- a/content/modules/ROOT/pages/module-07.adoc
+++ b/content/modules/ROOT/pages/module-07.adoc
@@ -1,4 +1,4 @@
-= Lab Guide: Deploying the Execution Environment with ansible-builder
+= Lab Guide: Creating an Execution Environment with ansible-builder
 :doctype: book
 :experimental:
 :notoc:
