update nav sorting, add images and fix format issues

--- a/content/modules/ROOT/nav.adoc
+++ b/content/modules/ROOT/nav.adoc
@@ -3,6 +3,7 @@
 * xref:module-03.adoc[Using Ansible development environment]
 * xref:module-04.adoc[Adding a module to our collection]
 * xref:module-05.adoc[Testing our collection with Molecule]
-* xref:module-06.adoc[What's next]
+* xref:module-06.adoc[Creating an Execution Environment with ansible-builder]
+* xref:module-07.adoc[What's next]
 
 
