--- a/content/modules/ROOT/pages/module-01.adoc
+++ b/content/modules/ROOT/pages/module-01.adoc
@@ -27,9 +27,9 @@ Before we begin, here are some basic tips to improve your lab experience:
 
 .   The lab consists of several **Chapters** (or sections). Each chapter contains one or more **Tasks**.
 
-.   If you receive any VS Code notification pop-ups, you can safely ignore and dismiss them by clicking `x`, `Dismiss`, or `Ignore`.
+.   If you receive any VS Code notification pop-ups, you can safely ignore and dismiss them by clicking `x`, `Dismiss`, or `Ignore`, unless otherwise noted.
 
 .   When you finish a Chapter, you must click the **Next** button at the bottom of the instructions sidebar to proceed. 
 
-.   You can now click **Next** to continue.
+.   You can now click **Next** to continue!
 
