--- a/content/modules/ROOT/pages/module-04.adoc
+++ b/content/modules/ROOT/pages/module-04.adoc
@@ -14,7 +14,6 @@ _A guide to adding a custom module to your Ansible collection and using it in a 
 
 In this challenge, you will be adding content to the collection you created and then testing it with a new playbook.
 
-image::image.png[VS Code editor showing Ansible files, opts="border"]
 
 ---
 
@@ -93,13 +92,13 @@ image::May-06-2025_at_22.28.04-image.png[Ansible Lint warnings in VS Code, opts=
 
 .   **Open the Ansible extension settings.** **Click** the **Extensions** icon in the left sidebar. Find the **Ansible** extension, **click** the gear icon (⚙️), and select **Extension Settings**.
 +
-image::image.png[Ansible Extension Settings, opts="border"]
+image::vscode-devtools-extension-settings.png[Ansible Extension Settings, opts="border"]
 
 .   **Enable the linter and auto-fix.** In the search bar at the top, type `lint` to filter the settings.
 * Make sure the checkbox for `Ansible › Validation › Lint: Enabled` is checked.
 * In the `Ansible › Validation › Lint: Arguments` field below, enter `--fix`. This tells the linter to automatically fix issues it finds.
 +
-image::image.png[Ansible Lint settings, opts="border"]
+image::vscode-devtools-lint-fix.png[Ansible Lint settings, opts="border"]
 
 .   **Trigger the auto-fix.** Go back to the `mycowsay.yml` playbook tab and **save the file** (`Ctrl + S` or `Cmd + S`). Wait a few seconds for `ansible-lint` to run. It should automatically fix several formatting issues.
 
@@ -127,18 +126,18 @@ Now that your playbook is lint-free, let's run it using both `ansible-playbook` 
 
 .   **Run with `ansible-playbook`.** In the VS Code file explorer, **right-click** your `mycowsay.yml` playbook. From the context menu, select **Run Ansible Playbook**. The output in the terminal should display a friendly cow saying "Hello, Ansible!".
 +
-image::image.png[Playbook output with cowsay message, opts="border"]
+image::vscode-devtools-cowsay-run1.png[Playbook output with cowsay message, opts="border"]
 
 .   **Run with `ansible-navigator`.** **Right-click** the playbook again, but this time select **Run with Ansible Navigator**. This will launch the Terminal User Interface (TUI).
 +
-image::image.png[Ansible Navigator TUI, opts="border"]
+image::vscode-devtools-cowsay-run2.png[Ansible Navigator TUI, opts="border"]
 
 .   **Explore the Navigator output.** You are now inside the `ansible-navigator` TUI.
 * To the left of the play name, you will see the number `0`. **Press `0`** to drill down into the details for that play.
 * You can now see the three tasks from your playbook. **Press `2`** to see the output of the final "Display the result" task.
 * You may need to scroll down to find the cow message.
 +
-image::image.png[Viewing task output in Ansible Navigator, opts="border"]
+image::scode-devtools-cowsay-navigator.png[Viewing task output in Ansible Navigator, opts="border"]
 
 .   **Exit Ansible Navigator.** **Press** the `ESC` key three times to exit the TUI and return to the normal terminal prompt.
 
